src/test/deca/context/valid/SansObjet/DeclVar-UnaryMinus-int-int.deca
// Description:
//    Declaration of a int variable using - operation on a int variable .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    int z = -x ; 
}
