src/test/deca/context/invalid/SansObjet/DeclVar-Plus-int-boolean-int.deca
// Description:
//    Declaration of a int variable using + operation between a boolean variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    int y = 5; 
    int z = x + y ; 
}
